# audiokit

./: .coverage  .coverage.Nates-Mac-mini.local.81169.XHwFChex  .cursorrules  .env  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  PLUGIN_GUIDE.md  README.md  TECHNICAL.md  TODO.txt  config.yml  docker-compose.yml  justfile  mkdocs.yml  plugin_manager.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
audiokit/: __init__.py  cli.py  client.py  config.py  errors.py  exceptions.py  plugin_interface.py  utils.py
audiokit/ai/: __init__.py  analysis.py  generation.py  processing.py  some_module.py
audiokit/cli/: app.py  pipeline.py  widgets.py
audiokit/cli/widgets/: __init__.py  analyzer.py  context_menu.py  monitor.py  pipeline.py  visualizers.py
audiokit/core/: config.py  exceptions.py  indexing.py  logging.py  openrouter_config.py  utils.py
audiokit/graph/: __init__.py  manager.py
audiokit/nodes/: __init__.py  base.py  effects.py  io.py
audiokit/plugins/: base.py  security.py
audiokit/services/: clients.py  soundcharts.py
audiokit_cli/: __init__.py  batch.py  config.py  plugin.py  progress.py
docs/: BOOTSTRAP.md  cli.md
plugins/: ai_mastering.py
tests/: __init__.py  conftest.py  setup_test_env.py  test_ai.py  test_analysis.py  test_cli.py  test_client.py  test_config.py  test_core.py  test_errors.py  test_exceptions.py  test_generation.py  test_help.py  test_indexing.py  test_nodes.py  test_not_implemented.py  test_plugin_manager.py  test_processing.py  test_services.py  test_smoke.py  test_utils.py
tests/ai/: test_analysis.py
tests/fixtures/: create_test_audio.py
title=tests/: conftest.py
