# MIT License
# 
# Copyright (c) 2025 AudioKit.ai
# 
# This file is part of the AudioKit AI package.
# 

# 
# This software is confidential and proprietary.
# 

# 
# This software is confidential and proprietary.
# 

# CONFIDENTIAL AND PROPRIETARY
#
#
# This software is confidential and proprietary.
#

# CONFIDENTIAL AND PROPRIETARY
#
#
# This software is confidential and proprietary.
#

[project]
name = "audiokit"
version = "0.1.0"
description = "Audio processing toolkit"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",  # CLI framework
    "shellingham>=1.3.0",  # Shell detection for typer
    "pyyaml",      # YAML support
    "rich",        # Terminal formatting
    "loguru",      # Logging
    "numpy",       # Numerical computing
    "scipy",       # Scientific computing
    "sounddevice", # Audio I/O
]

[project.scripts]
ak = "audiokit.cli.pipeline:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["audiokit"]  # Specify the package directory

[tool.hatch.build.targets.wheel]
packages = ["audiokit"]  # Also needed for wheel builds