[project]
name = "audiokit"
version = "0.1.0"
description = "Audio processing toolkit"
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "typer>=0.9.0",      # CLI framework
    "shellingham>=1.3.0", # Shell detection for typer
    "pyyaml",            # YAML support
    "rich",              # Terminal formatting
    "loguru",            # Logging
    "httpx>=0.24.0",
    
    # Audio processing
    "numpy>=1.20.0",     # Numerical computing
    "scipy>=1.7.0",      # Scientific computing
    "sounddevice",       # Audio I/O
    "soundfile",         # Audio file I/O
    "librosa>=0.9.0",    # Music/audio analysis
    "textual>=0.52.1",   # TUI framework
    "plotext>=5.2.8",    # Terminal plotting
    "pyaudio",
    "asyncio",
    "websockets>=10.0",
]

[project.optional-dependencies]
effects = [
    "pyroomacoustics",  # Room acoustics and reverb
    "pedalboard",       # High-quality audio effects
    "torch",            # Deep learning effects
]

analysis = [
    "matplotlib",       # Visualization
    "aubio",           # Music analysis
    "essentia",        # Audio analysis
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[project.scripts]
ak = "audiokit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["audiokit"]

[tool.hatch.build.targets.wheel]
packages = ["audiokit"]

# Development tool configurations
[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]